sponsors.html page reformat

--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -1,196 +1,166 @@
 <div class="sponsors">
 
-<div id="topinfo" class="area orange">
-    <div class="grid">
-
-        <div class="row">
-            <div class="col9">
-
-                <h1>Sponsorship Opportunities</h1>
-
-                <p>Want to sponsor Devoxx Belgium 2013?</br>
-                    Then please contact Kristien Leyn at <a href="mailto:kle@bejug.org">kle@bejug.org</a></p>
-
+    <div id="topinfo" class="area orange">
+        <div class="grid">
+            <div class="row">
+                <div class="col9">
+                    <h1>Sponsorship Opportunities</h1>
+                    <p>Want to sponsor Devoxx Belgium 2013?</br>
+                        Then please contact Kristien Leyn at <a href="mailto:kle@bejug.org">kle@bejug.org</a></p>
+                </div>
             </div>
         </div>
-
     </div>
-</div>
 
+    <div id="premium" class="area white">
+        <div class="grid">
 
-<div id="premium" class="area white">
-    <div class="grid">
+            <div class="row">
+                <div class="col15">
+                    <h2>Meet our platinum sponsors</h2>
+                    <p>Devoxx would be less fun and more expensive without our platinum sponsors!</p>
+                </div>
+            </div>
 
-        <div class="row">
-            <div class="col15">
-
-                <h2>Meet our platinum sponsors</h2>
-
-                <p>Devoxx would be less fun and more expensive without our platinum sponsors!</p>
-
+            <div class="row gold">
+                <div class="col5 push1">
+                    <a href="http://www.oracle.com" target="_blank"><img src="images/sponsors/oracle.png" alt="Oracle"/></a>
+                    <p>The steward of Java</p>
+                </div>
+                <div class="col5 push1">
+                    <a href="http://www.jboss.com" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
+                    <p>The open source Java EE application server</p>
+                </div>
+                <div class="col5 push1">
+                    <a href="http://www.google.com" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google"/></a>
+                    <p>The search company behind Android and Chrome</p>
+                </div>
             </div>
         </div>
-
-        <div class="row gold">
-            <div class="col5 push1">
-
-                <a href="http://www.oracle.com" target="_blank"><img src="images/sponsors/oracle.png" alt="Oracle"/></a>
-
-                <p>The steward of Java</p>
-
-            </div>
-            <div class="col5 push1">
-
-                <a href="http://www.jboss.com" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
-
-                <p>The open source Java EE application server</p>
-
-            </div>
-            <div class="col5 push1">
-
-                <a href="http://www.google.com" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google"/></a>
-
-                <p>The search company behind Android and Chrome</p>
-
-            </div>
-        </div>
-
     </div>
-</div>
 
-<div id="sponsors_opportunities" class="area lightgrey">
-    <div class="grid">
+    <div id="sponsors_opportunities" class="area lightgrey">
+        <div class="grid">
 
-        <div class="row">
-            <div class="col20">
-
-                <h2>Sponsorship Opportunities</h2>
-
-                <p>Become a Devoxx sponsor and promote your services, products or simply increase your brand awareness
-                    with 3500 European Devoxxians!</p>
-
-                <p><a href="kle@bejug.org">Contact us</a> today and discuss the right sponsorship opportunity for you.
-                </p>
-
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col20">
-
-                <table width="100%" cellspacing="1" cellpadding="15" border="0" class="sponsors_opportunities">
-                    <tbody>
-                    <tr>
-                        <th width="70%" align="center" class="tablehead"></th>
-                        <th width="10%" align="center" class="tablehead">Platinum<br></th>
-                        <th width="10%" align="center" class="tablehead">Silver<br></th>
-                        <th width="10%" align="center" class="tablehead">Bronze(+)<br></th>
-                    </tr>
-                    <tr>
-                        <th align="left" class="tablesub" colspan="6">Company Logo</th>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">On merchandising (t-shirt, welcome bag and block note)</td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Newsletter Insersts</td>
-                        <td align="center">3</td>
-                        <td align="center">2</td>
-                        <td align="center">1</td>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Logo on the Devoxx website footer (with link)</td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                    </tr>
-                    <tr>
-                        <th align="left" class="tablesub" colspan="6">Exhibition Days (Tue/Wed/Thu)</th>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Booth</td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Booth Size</td>
-                        <td align="center">24 sqm 6x4</td>
-                        <td align="center">12 sqm 4x3</td>
-                        <td align="center">6 sqm 2x3</td>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Wired Connection</td>
-                        <td align="center">1</td>
-                        <td align="center">On Request</td>
-                        <td align="center">On Request</td>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Scanner</td>
-                        <td align="center">1</td>
-                        <td align="center">1</td>
-                        <td align="center">On Request</td>
-                    </tr>
-                    <tr>
-                        <th align="left" class="tablesub" colspan="6">Guaranteed Partner Speaking Slot</th>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">&nbsp;</td>
-                        <td>University or Conference</td>
-                        <td>Conference</td>
-                        <td>Conference Bronze+</td>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Recorded for Parleys.com</td>
-                        <td align="center"><img style="padding-left: 10px;" src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                    </tr>
-                    <tr>
-                        <th align="left" class="tablesub" colspan="6">Devoxx welcome bag</th>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Item insert</td>
-                        <td align="center">1</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <th align="left" class="tablesub" colspan="6">Public Relations</th>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">5 Day Passes</td>
-                        <td align="center">12</td>
-                        <td align="center">8</td>
-                        <td align="center">4</td>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Attendee list (name, company and country)</td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                    </tr>
-                    <tr>
-                        <th align="left" class="tablesub" colspan="6">Advertising Possibilities</th>
-                    </tr>
-                    <tr>
-                        <td class="tabletxt1">Parleys.com</td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                    </tr>
-                    </tbody>
-                </table>
-
+            <div class="row">
+                <div class="col20">
+                    <h2>Sponsorship Opportunities</h2>
+                    <p>Become a Devoxx sponsor and promote your services, products or simply increase your brand awareness
+                        with 3500 European Devoxxians!</p>
+                    <p><a href="kle@bejug.org">Contact us</a> today and discuss the right sponsorship opportunity for you.</p>
+                </div>
             </div>
 
+            <div class="row">
+                <div class="col20">
+                    <table width="100%" cellspacing="1" cellpadding="15" border="0" class="sponsors_opportunities">
+                        <tbody>
+                        <tr>
+                            <th width="70%" align="center" class="tablehead"></th>
+                            <th width="10%" align="center" class="tablehead">Platinum<br></th>
+                            <th width="10%" align="center" class="tablehead">Silver<br></th>
+                            <th width="10%" align="center" class="tablehead">Bronze(+)<br></th>
+                        </tr>
+                        <tr>
+                            <th align="left" class="tablesub" colspan="6">Company Logo</th>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">On merchandising (t-shirt, welcome bag and block note)</td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Newsletter Insersts</td>
+                            <td align="center">3</td>
+                            <td align="center">2</td>
+                            <td align="center">1</td>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Logo on the Devoxx website footer (with link)</td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                        </tr>
+                        <tr>
+                            <th align="left" class="tablesub" colspan="6">Exhibition Days (Tue/Wed/Thu)</th>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Booth</td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Booth Size</td>
+                            <td align="center">24 sqm 6x4</td>
+                            <td align="center">12 sqm 4x3</td>
+                            <td align="center">6 sqm 2x3</td>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Wired Connection</td>
+                            <td align="center">1</td>
+                            <td align="center">On Request</td>
+                            <td align="center">On Request</td>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Scanner</td>
+                            <td align="center">1</td>
+                            <td align="center">1</td>
+                            <td align="center">On Request</td>
+                        </tr>
+                        <tr>
+                            <th align="left" class="tablesub" colspan="6">Guaranteed Partner Speaking Slot</th>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">&nbsp;</td>
+                            <td>University or Conference</td>
+                            <td>Conference</td>
+                            <td>Conference Bronze+</td>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Recorded for Parleys.com</td>
+                            <td align="center"><img style="padding-left: 10px;" src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                        </tr>
+                        <tr>
+                            <th align="left" class="tablesub" colspan="6">Devoxx welcome bag</th>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Item insert</td>
+                            <td align="center">1</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <th align="left" class="tablesub" colspan="6">Public Relations</th>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">5 Day Passes</td>
+                            <td align="center">12</td>
+                            <td align="center">8</td>
+                            <td align="center">4</td>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Attendee list (name, company and country)</td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                        </tr>
+                        <tr>
+                            <th align="left" class="tablesub" colspan="6">Advertising Possibilities</th>
+                        </tr>
+                        <tr>
+                            <td class="tabletxt1">Parleys.com</td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-
     </div>
-</div>
-
 </div>
