--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -32,7 +32,7 @@
                     <p>The open source Java EE application server</p>
                 </div>
                 <div class="col5 push1">
-                    <a href="http://www.google.com" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google"/></a>
+                    <a href="http://www.google.com" target="_blank"><img src="images/sponsors/google.png" alt="Google"/></a>
                     <p>The search company behind Android and Chrome</p>
                 </div>
             </div>
