Corrected img src path

--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -24,15 +24,15 @@
 
             <div class="row gold">
                 <div class="col5 push1">
-                    <a href="http://www.oracle.com" target="_blank"><img src="images/sponsors/oracle.png" alt="Oracle"/></a>
+                    <a href="http://www.oracle.com" target="_blank"><img src="../images/sponsors/oracle.png" alt="Oracle"/></a>
                     <p>The steward of Java</p>
                 </div>
                 <div class="col5 push1">
-                    <a href="http://www.jboss.com" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
+                    <a href="http://www.jboss.com" target="_blank"><img src="../images/sponsors/jboss.png" alt="JBoss"/></a>
                     <p>The open source Java EE application server</p>
                 </div>
                 <div class="col5 push1">
-                    <a href="http://www.google.com" target="_blank"><img src="images/sponsors/google.png" alt="Google"/></a>
+                    <a href="http://www.google.com" target="_blank"><img src="../images/sponsors/google.png" alt="Google"/></a>
                     <p>The search company behind Android and Chrome</p>
                 </div>
             </div>
@@ -78,18 +78,18 @@
                         </tr>
                         <tr>
                             <td class="tabletxt1">Logo on the Devoxx website footer (with link)</td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
                         </tr>
                         <tr>
                             <th align="left" class="tablesub" colspan="6">Exhibition Days (Tue/Wed/Thu)</th>
                         </tr>
                         <tr>
                             <td class="tabletxt1">Booth</td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
                         </tr>
                         <tr>
                             <td class="tabletxt1">Booth Size</td>
@@ -120,9 +120,9 @@
                         </tr>
                         <tr>
                             <td class="tabletxt1">Recorded for Parleys.com</td>
-                            <td align="center"><img style="padding-left: 10px;" src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img style="padding-left: 10px;" src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
                         </tr>
                         <tr>
                             <th align="left" class="tablesub" colspan="6">Devoxx welcome bag</th>
@@ -144,18 +144,18 @@
                         </tr>
                         <tr>
                             <td class="tabletxt1">Attendee list (name, company and country)</td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
                         </tr>
                         <tr>
                             <th align="left" class="tablesub" colspan="6">Advertising Possibilities</th>
                         </tr>
                         <tr>
                             <td class="tabletxt1">Parleys.com</td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
                         </tr>
                         </tbody>
                     </table>
