--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -66,7 +66,7 @@
                         </tr>
                         <tr>
                             <td class="tabletxt1">On merchandising (t-shirt, welcome bag and block note)</td>
-                            <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                            <td align="center"><img src="../images/carousel_pager.png" alt=""></td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
                         </tr>
