Added 2nd mailto:

--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -47,7 +47,7 @@
                     <h2>Sponsorship Opportunities</h2>
                     <p>Become a Devoxx sponsor and promote your services, products or simply increase your brand awareness
                         with 3500 European Devoxxians!</p>
-                    <p><a href="kle@bejug.org">Contact us</a> today and discuss the right sponsorship opportunity for you.</p>
+                    <p><a href="mailto:kle@bejug.org">Contact us</a> today and discuss the right sponsorship opportunity for you.</p>
                 </div>
             </div>
 
