--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -71,7 +71,7 @@
                             <td>&nbsp;</td>
                         </tr>
                         <tr>
-                            <td class="tabletxt1">Newsletter Insersts</td>
+                            <td class="tabletxt1">Newsletter Inserts</td>
                             <td align="center">3</td>
                             <td align="center">2</td>
                             <td align="center">1</td>
