Issue #43 : add link to this issue tracker on the site

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -27,6 +27,7 @@
     <div class="grid">
         <p>We've open sourced the Devoxx Call For Papers client side modules, just click on the above header image to see the related github repo's.</p>
         <p>Improvements are always welcome. Lets us know when you have a 'pull request' available and we'll add you as a contributor!</p>
+	<p>If you stumble upon a problem while using this CFP client module, you can <a href="https://github.com/devoxx/cfp-speaker/issues">report it on GitHub</a>.</p>
 
         <div class="row">
             <div class="col8">
