Removed "Submit a Talk" links

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,7 +7,6 @@
                         <h1>Born to be</h1>
                         <h3>November 11-15 2013</h3>
                         <p>Ready for your rebirth?</p>
-                        <a href="#/speaker/proposal/new" class="btn">Submit a talk</a>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
@@ -305,10 +304,10 @@
                         </div>
                     </li>
                 </ul>
-                <br><br>
-                <h2>
-                     <a href="#/speaker/proposal/new" class="btn">Submit a talk</a>
-                </h2>
+                <!--<br><br>-->
+                <!--<h2>-->
+                     <!--<a href="#/speaker/proposal/new" class="btn">Submit a talk</a>-->
+                <!--</h2>-->
             </div>
         </div>
     </div>
