Added news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -131,6 +131,13 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <img src="../images/news/experience.png" alt="">
+                <div class="date">8 July '13</div>
+                <h4>Call For Papers Closed</h4>
+                <p>Thanks to the many Devoxxians that submitted talks! The program committee will review, rate and schedule the talks in the coming weeks.
+                Expect a first batch beginning of August followed by another batch early September.</p>
+            </li>
+            <li>
                 <a href="http://www.devoxx.com/display/4KIDSNL/Home"><img src="../images/news/d4kids_nl.png" alt=""></a>
                     <div class="date">8 June '13</div>
                     <h4>Devoxx4Kids NL</h4>
