Removed CFP header news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -15,22 +15,22 @@
                 </div>
             </div>                  
         </li>
-        <li>
-            <div class="grid">
-                <div class="row">           
-                    <div class="col9 content">
-                        <h1>Call for Presentations</h1>
-                        <h3>Speak @Devoxx</h3>
-                        <p>We're looking for passionate developers from the community to present at Devoxx, check out the tracks and submit your talk(s)</p>
-                        <a href="#/tracks" scroll="tracks" class="btn">Check our tracks</a>
-                    </div>
-                    <div class="col11">
-                        <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
-                    </div>
-                </div>
-                
-            </div>                  
-        </li>
+        <!--<li>-->
+            <!--<div class="grid">-->
+                <!--<div class="row">           -->
+                    <!--<div class="col9 content">-->
+                        <!--<h1>Call for Presentations</h1>-->
+                        <!--<h3>Speak @Devoxx</h3>-->
+                        <!--<p>We're looking for passionate developers from the community to present at Devoxx, check out the tracks and submit your talk(s)</p>-->
+                        <!--<a href="#/tracks" scroll="tracks" class="btn">Check our tracks</a>-->
+                    <!--</div>-->
+                    <!--<div class="col11">-->
+                        <!--<img src="images_dummy/slide_02.png" class="visual" alt="Be born again">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!---->
+            <!--</div>                  -->
+        <!--</li>-->
         <li>
             <div class="grid">
             
