Added new contributor

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -49,6 +49,7 @@
 
                 <ul class="linkList">
                     <li><a href="http://www.twitter.com/ndeloof">Nicolas De Loof</a> (@ndeloof)</li>
+                    <li><a href="http://www.twitter.com/paulw4tson">Paul Watson</a> (@paulw4tson)</li>
                 </ul>
 
                 <h4>Gracefully hosted by CloudBees Platform</h4>
