Added new hotel

--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -67,6 +67,7 @@
                     <li><a href="http://www.hiexpress.com/redirect?path=hd&brandCode=ex&localeCode=en&regionCode=1&hotelCode=ANRHE&_PMID=99502056&corpNum=954317702&blpu=true">Holiday Inn Express Antwerp City-North</a> (2.7km)</li>
                     <li><a href="http://www.radissonblu.com/astridhotel-antwerp">Radisson blu</a> (4.2km)</li>
                     <li><a href="http://reservations.leopoldhotelantwerp.com/bookings/specials/devoxx">Leopold Hotel Antwerp</a> (2.3km)</li>
+                    <li><a href="http://reservations.ramadaplaza-antwerp.com/bookings/specials/devoxx">Ramada Plaza Antwerp</a> (10km)</li>
                 </ul>
 
             </div>
