- Added Thank You page for registration - Added "Buy Tickets"

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,6 +7,7 @@
                         <h1>Born to be</h1>
                         <h3>November 11-15 2013</h3>
                         <p>Ready for your rebirth?</p>
+                        <a href="https://regbe.devoxx.com/public#DV13" class="btn">BUY TICKETS</a>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
@@ -119,7 +120,7 @@
             <div class="col7 push1 content">
                 <h2>Belgium expects 3450 Devoxxians</h2>
                 <p>The biggest developer community conference has opened the Call for Papers for the Devoxx Belgium edition, help us shape another crazy geek gathering!</p>
-                <a href="#" class="btn hidden">Buy tickets</a>
+                <a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>
             </div>
         </div>
     </div>
