Added news entry

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,13 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <img src="../images/news/register_today.png" alt="">
+                <div class="date">23 July '13</div>
+                <h4>Registration Open</h4>
+                <p>Online registration is <a href="https://regbe.devoxx.com/public#DV13">now open</a>.</p>
+                <p>Devoxx has been sold out 5 years in a row and we assume this year will not be any different.  So don't wait too long to get your Devoxx tickets, you've been warned!</p>
+            </li>
+            <li>
                 <img src="../images/news/experience.png" alt="">
                 <div class="date">8 July '13</div>
                 <h4>Call For Papers Closed</h4>
