--- a/app/views/home.html
+++ b/app/views/home.html
@@ -119,7 +119,7 @@
             </div>
             <div class="col7 push1 content">
                 <h2>Belgium expects 3450 Devoxxians</h2>
-                <p>The biggest developer community conference has opened the Call for Papers for the Devoxx Belgium edition, help us shape another crazy geek gathering!</p>
+                <p>Registration is now open for the 12th Devoxx edition, get your tickets today before we again sell out!</p>
                 <a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>
             </div>
         </div>
